--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.SpotifyCloneMVVM"
         tools:targetApi="31">
+        <service
+            android:name=".exoplayer.MusicService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService"/>
+            </intent-filter>
+        </service>
         <activity
             android:name=".ui.MainActivity"
             android:exported="true">
